# test_data_cleaning

./: .gitignore  README.md  adg_to_brand_industry.py  bilstm_train.py  brand_task.csv  brand_task.xlsx  brand_task_clean.py  brand_task_cleaned_brand_summary.csv  brand_task_cleaned_category_summary.csv  brand_task_cleaned_full.csv  brand_task_cleaned_ml_ready.csv  brans task.docx  evaluate_bilstm.py  predict_bilstm.py  pyproject.toml  requirements.txt
artifacts/: adg_brand_category_stats.json  evaluation_report.txt
bilstm_artifacts/: cleaned_training_data.csv  label_encoder_classes.json
docs/: CLIENT_GUIDE.md
src/brand_classification/: __init__.py  adg_lookup.py  config.py  data_loader.py  evaluate.py  predict.py  preprocessing.py  train.py  train_brand.py
tests/: test_smoke.py
